--- a/style.css
+++ b/style.css
@@ -11,15 +11,22 @@ body {
 }
 
 header {
-    display: grid;
     grid-area: 1 / 2 / 2 / 3;
+    display: grid;
     grid-template-rows: 1.5fr 1fr;
     grid-template-columns: 1fr 1fr;
 }
 
-.sidebar {
+.search {
+    grid-area: 1 / 1 / 2 / 2;
     display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: auto 1fr;
+}
+
+.sidebar {
     grid-area: 1 / 1 / 3 / 2;
-    grid-template-columns: 1fr;
+    display: grid;
     grid-template-rows: 0.5fr 2fr 1fr;
+    grid-template-columns: 1fr;
 }
