--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
 header {
     grid-area: 1 / 2 / 2 / 3;
     display: grid;
-    grid-template-rows: 1.5fr 1fr;
-    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1.5fr 1fr;
 }
 
 .search {
@@ -22,6 +22,13 @@ header {
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: auto 1fr;
+}
+
+.user-menu {
+    grid-area: 1 / 2 / 2 / 3;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: auto auto 1fr;
 }
 
 .sidebar {
