--- a/style.css
+++ b/style.css
@@ -31,6 +31,25 @@ header {
     grid-template-columns: auto auto 1fr;
 }
 
+.profile {
+    grid-area: 2 / 1 / 3 / 2;
+    display: grid;
+    grid-template-rows: 2fr;
+    grid-template-columns: auto 1fr 1fr;
+}
+
+.profile-icon {
+    grid-area: 1 / 1 / 3 / 2;
+}
+
+.profile-greeting {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.profile-name {
+    grid-area: 2 / 2 / 3 / 3;
+}
+
 .sidebar {
     grid-area: 1 / 1 / 3 / 2;
     display: grid;
