--- a/style.css
+++ b/style.css
@@ -28,17 +28,17 @@ header {
     grid-area: 1 / 2 / 2 / 3;
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: auto auto 1fr;
+    grid-template-columns: repeat(2, auto) 1fr;
 }
 
 .profile {
     grid-area: 2 / 1 / 3 / 2;
     display: grid;
     grid-template-rows: 2fr;
-    grid-template-columns: auto 1fr 1fr;
+    grid-template-columns: auto repeat(2, 1fr);
 }
 
-.profile-icon {
+.profile .profile-icon {
     grid-area: 1 / 1 / 3 / 2;
 }
 
@@ -46,8 +46,14 @@ header {
     grid-area: 1 / 2 / 2 / 3;
 }
 
-.profile-name {
+.profile .profile-name {
     grid-area: 2 / 2 / 3 / 3;
+}
+
+.content-interaction {
+    grid-area: 2 / 2 / 3 / 3;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .sidebar {
