--- a/style.css
+++ b/style.css
@@ -69,3 +69,10 @@ header {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 2.75fr 1fr;
 }
+
+.your-projects {
+    grid-area: 1 / 1 / 3 / 2;
+    display: grid;
+    grid-template-rows: auto 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+}
