--- a/style.css
+++ b/style.css
@@ -66,15 +66,15 @@ header {
 .main-content {
     grid-area: 2 / 2 / 3 / 3;
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
     grid-template-columns: 2.75fr 1fr;
 }
 
 .your-projects {
     grid-area: 1 / 1 / 3 / 2;
     display: grid;
-    grid-template-rows: auto 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .content-title {
@@ -91,5 +91,12 @@ header {
     grid-area: 1 / 2 / 2 / 3;
     display: grid;
     grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr;
+}
+
+.announcements-board {
+    grid-area: 2 / 1 / 3 / 2;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
     grid-template-columns: 1fr;
 }
