--- a/style.css
+++ b/style.css
@@ -107,3 +107,13 @@ header {
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: 1fr;
 }
+
+.trending-project {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: auto 1fr;
+}
+
+.trending-profile-icon {
+    grid-area: 1 / 1 / 3 / 2;
+}
