--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
     grid-area: 1 / 1 / 2 / 2;
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto 0.95fr;
 }
 
 .user-menu {
@@ -116,4 +116,40 @@ header {
 
 .trending-profile-icon {
     grid-area: 1 / 1 / 3 / 2;
+}
+
+.search {
+    align-items: center;
+}
+
+.search-icon {
+    justify-self: center;
+}
+
+.search-icon button {
+    background-color: transparent;
+    border: none;
+}
+
+.search-icon button:hover {
+    color: #808080;
+    cursor: pointer;
+}
+
+.search-icon button:active {
+    transform: translateY(2px);
+}
+
+.search-bar input {
+    background-color: #D1C2E0;
+    height: 2rem;
+    width: 100%;
+    border: none;
+    border-radius: 1rem;
+    padding-left: 1rem;
+    outline: none;
+}
+
+.search-bar input:focus {
+    border: 2px solid #663399;
 }
