--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
     grid-area: 1 / 2 / 2 / 3;
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: repeat(2, auto) 1fr;
+    grid-template-columns: repeat(2, auto) 0.85fr;
 }
 
 .profile {
@@ -118,6 +118,10 @@ header {
     grid-area: 1 / 1 / 3 / 2;
 }
 
+body {
+    font-family: 'Courier New', Courier, monospace;
+}
+
 .search {
     align-items: center;
 }
@@ -152,4 +156,21 @@ header {
 
 .search-bar input:focus {
     border: 2px solid #663399;
+}
+
+.user-menu {
+    list-style: none;
+    align-items: center;
+    margin-left: 5vw;
+    padding: 0;
+}
+
+.user-menu img {
+    width: 3.2rem;
+    height: auto;
+}
+
+.user-menu .profile-name {
+    font-weight: 700;
+    font-size: 1.2rem;
 }
