--- a/style.css
+++ b/style.css
@@ -34,12 +34,15 @@ header {
 .profile {
     grid-area: 2 / 1 / 3 / 2;
     display: grid;
-    grid-template-rows: 2fr;
-    grid-template-columns: auto repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: auto 0.95fr;
 }
 
 .profile .profile-icon {
     grid-area: 1 / 1 / 3 / 2;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
 }
 
 .profile-greeting {
@@ -170,7 +173,35 @@ body {
     height: auto;
 }
 
-.user-menu .profile-name {
+.user-menu .user-menu-profile-name {
     font-weight: 700;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
+}
+
+.profile {
+    align-items: center;
+    padding-bottom: 1rem;
+}
+
+.profile img {
+    width: 4.35rem;
+    height: auto;
+    justify-self: end;
+}
+
+.profile-icon {
+    padding-right: 1.3rem;
+}
+
+.profile-greeting {
+    align-self: end;
+    font-size: 0.9rem;
+    font-weight: 700;
+    padding-bottom: 0.5rem;
+}
+
+.profile-name {
+    align-self: start;
+    font-size: 1.5rem;
+    font-weight: 700;
 }
