--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header {
 .sidebar {
     grid-area: 1 / 1 / 3 / 2;
     display: grid;
-    grid-template-rows: 0.5fr 2fr 1fr;
+    grid-template-rows: auto 2fr 1fr 2fr;
     grid-template-columns: 1fr;
 }
 
@@ -184,10 +184,11 @@ img:active, .user-menu-profile-name:active {
     justify-items: center;
     align-items: center;
     padding: 0 4vw;
+    gap: 1rem;
 }
 
 .user-menu img {
-    width: 3.2rem;
+    width: 3rem;
     height: auto;
 }
 
@@ -207,7 +208,7 @@ img:active, .user-menu-profile-name:active {
 }
 
 .profile img {
-    width: 4.35rem;
+    width: 4.5rem;
     height: auto;
     justify-self: end;
 }
@@ -233,6 +234,7 @@ img:active, .user-menu-profile-name:active {
     list-style-type: none;
     align-items: center;
     justify-items: center;
+    gap: 2rem;
 }
 
 .content-interaction-button {
@@ -250,4 +252,73 @@ img:active, .user-menu-profile-name:active {
     background-color: #7547A3;
     color: #E6E6E6;
     transform: translateY(2px);
+}
+
+.sidebar {
+    color: #FFFFFF;
+    background-color: #663399;
+    align-items: center;
+    justify-items: center;
+}
+
+.dashboard-logo {
+    grid-area: 1 / 1 / 2 / 2;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    justify-items: center;
+    gap: 0.8rem;
+    font-size: 2rem;
+    font-weight: 700;
+    height: 6rem;
+}
+
+.sidebar span {
+    font-variation-settings:'FILL' 1;
+}
+
+.dashboard-icon span {
+    font-size: 50px;
+}
+
+.sidebar nav {
+    width: 100%;
+}
+
+.sidebar ul {
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    gap: 1rem;
+}
+
+.sidebar li {
+    list-style-type: none;
+    display: grid;
+    justify-items: start;
+    width: 100%;
+}
+
+.sidebar button {
+    color: inherit;
+    background-color: transparent;
+    border: none;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: auto 1fr;
+    justify-items: start;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1.5rem;
+    padding-left: 2.5rem;
+    font-weight: 700;
+}
+
+.pages {
+    color: #FFFFFF;
+}
+
+.pages button {
+    color: inherit;
 }
