--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ header {
     grid-template-columns: repeat(2, 1fr);
 }
 
-.content-title {
+.your-projects .content-title {
     grid-area: 1 / 1 / 2 / 3;
 }
 
@@ -114,7 +114,7 @@ header {
 .trending-projects {
     grid-area: 2 / 2 / 3 / 3;
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: auto repeat(4, 1fr);
     grid-template-columns: 1fr;
 }
 
@@ -132,10 +132,6 @@ body {
     font-family: 'Courier New', Courier, monospace;
 }
 
-header {
-    box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.5);
-}
-
 .search {
     align-items: center;
 }
@@ -144,7 +140,7 @@ header {
     justify-self: center;
 }
 
-.search-icon button, .notification-icon button {
+.search-icon button, .notification-icon button, .project-interaction button {
     background-color: transparent;
     border: none;
 }
@@ -153,11 +149,11 @@ button, img, .user-menu-profile-name {
     cursor: pointer;
 }
 
-.search-icon button:hover, .notification-icon button:hover {
+.search-icon button:hover, .notification-icon button:hover, .project-interaction button:hover {
     color: #808080;
 }
 
-.search-icon button:active, .notification-icon button:active {
+.search-icon button:active, .notification-icon button:active, .project-interaction button:active {
     transform: translateY(2px);
 }
 
@@ -198,7 +194,7 @@ img:active, .user-menu-profile-name:active {
 }
 
 .user-menu-profile-name:hover {
-    color: #444;
+    color: #444444;
     text-decoration: underline;
 }
 
@@ -272,6 +268,7 @@ img:active, .user-menu-profile-name:active {
     font-size: 2rem;
     font-weight: 700;
     height: 6rem;
+    cursor: default;
 }
 
 .sidebar span {
@@ -290,7 +287,6 @@ img:active, .user-menu-profile-name:active {
     display: grid;
     align-items: center;
     justify-items: center;
-    gap: 1rem;
 }
 
 .sidebar li {
@@ -310,9 +306,20 @@ img:active, .user-menu-profile-name:active {
     justify-items: start;
     align-items: center;
     gap: 1rem;
+    width: 100%;
+    height: 3rem;
     font-size: 1.5rem;
     padding-left: 2.5rem;
     font-weight: 700;
+}
+
+.sidebar button:hover {
+    background-color: #855CAD;
+}
+
+.sidebar button:active{
+    background-color: #7547A3;
+    color: #CDCDCD;
 }
 
 .pages {
@@ -321,4 +328,46 @@ img:active, .user-menu-profile-name:active {
 
 .pages button {
     color: inherit;
+}
+
+.main-content {
+    box-shadow: inset 0px 5px 5px 0px #00000026;
+    background-color: #D1C2E0;
+}
+
+.your-projects {
+    margin: 2.5rem 1.5rem;
+    gap: 1rem;
+}
+
+.content-title {
+    font-size: 1.3rem;
+    font-weight: 700;
+}
+
+.project-card {
+    background-color: #FFFFFF;
+    border-left: 0.5rem solid #669933;
+    border-radius: 0.5rem;
+    box-shadow: 5px 5px 5px 0px #00000026;
+    padding: 2.5rem 1.5rem;
+    gap: 0.25rem;
+}
+
+.project-title {
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+
+.project-description {
+    color: #555555;
+}
+
+.project-interaction {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(3, auto);
+    gap: 1.5rem;
+    align-items: center;
+    justify-content: end;
 }
