--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@
 }
 
 img {
-    width: 60px;
-    height: auto;
     border-radius: 50%;
 }
 
@@ -89,7 +87,7 @@ header {
 
 .your-projects .content-title {
     grid-area: 1 / 1 / 2 / 3;
-    font-size: 1.4rem;
+    margin-bottom: -0.75rem;
 }
 
 .project-card {
@@ -115,7 +113,7 @@ header {
 .trending-projects {
     grid-area: 2 / 2 / 3 / 3;
     display: grid;
-    grid-template-rows: auto repeat(4, 1fr);
+    grid-template-rows: auto 1fr;
     grid-template-columns: 1fr;
 }
 
@@ -146,7 +144,7 @@ body {
     border: none;
 }
 
-button, img, .user-menu-profile-name {
+button, img, .user-menu-profile-name, .trending-profile-name, .trending-project-name {
     cursor: pointer;
 }
 
@@ -158,7 +156,7 @@ button, img, .user-menu-profile-name {
     transform: translateY(2px);
 }
 
-img:active, .user-menu-profile-name:active {
+img:active, .user-menu-profile-name:active, .trending-profile-name:active, .trending-project-name:active  {
     transform: translateY(1px);
 }
 
@@ -180,8 +178,7 @@ img:active, .user-menu-profile-name:active {
     list-style: none;
     justify-items: center;
     align-items: center;
-    padding: 0 4vw;
-    gap: 1rem;
+    padding: 0 2.5vw;
 }
 
 .user-menu img {
@@ -194,7 +191,7 @@ img:active, .user-menu-profile-name:active {
     font-size: 1.1rem;
 }
 
-.user-menu-profile-name:hover {
+.user-menu-profile-name:hover, .trending-profile-name:hover, .trending-project-name:hover {
     color: #444444;
     text-decoration: underline;
 }
@@ -337,14 +334,16 @@ img:active, .user-menu-profile-name:active {
     box-shadow: inset 0px 5px 5px 0px #00000026;
     background-color: #D1C2E0;
     padding: 2.25rem 1.5rem;
+    row-gap: 2.5rem;
+    column-gap: 1.75rem;
 }
 
 .your-projects {
-    gap: 1rem;
+    gap: 1.75rem;
 }
 
 .content-title {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     font-weight: 700;
 }
 
@@ -353,7 +352,7 @@ img:active, .user-menu-profile-name:active {
     border-left: 0.5rem solid #669933;
     border-radius: 0.5rem;
     box-shadow: 5px 5px 5px 0px #00000026;
-    padding: 2.5rem 1.5rem;
+    padding: 2.5rem 1.5rem 1.75rem 1.5rem;
     gap: 0.25rem;
 }
 
@@ -376,7 +375,6 @@ img:active, .user-menu-profile-name:active {
 }
 
 .announcements, .trending-projects {
-    padding: 0 1.5rem;
     gap: 1rem;
 }
 
@@ -388,7 +386,8 @@ img:active, .user-menu-profile-name:active {
     justify-items: center;
     background-color: #FFFFFF;
     border-radius: 0.5rem;
-    padding: 2rem;
+    padding: 0 2rem 0 2rem;
+    box-shadow: 5px 5px 5px 0px #00000026;
 }
 
 .announcement-title {
@@ -417,4 +416,33 @@ img:active, .user-menu-profile-name:active {
     border: none;
     padding: 1rem 0.3rem 0rem 0.3rem;
     align-self: start;
+}
+
+.trending-board {
+    display: grid;
+    grid-template-rows: repeat(4, fr);
+    grid-template-columns: 1fr;
+    background-color: #FFFFFF;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1.75rem 0.5rem 1.75rem;
+    box-shadow: 5px 5px 5px 0px #00000026;
+}
+
+.trending-project {
+    display: grid;
+    padding: 0.75rem 0;
+    column-gap: 1.25rem;
+}
+
+.trending-profile-icon {
+    align-self: center;
+}
+
+.trending-profile-icon img {
+    width: 3.3rem;
+    height: auto;
+}
+
+.trending-profile-name {
+    align-self: end;
 }
